--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,6 +1,5 @@
-<header style="margin-bottom: 60px">
-   <!-- Fixed navbar -->
-   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<header>
+   <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
       <a class="navbar-brand" href="#">Robocol</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -20,6 +19,6 @@
    </nav>
 </header>
 
-<main role="main">
+<main role="main" class="container-fluid">
   <router-outlet></router-outlet>
 </main>
