--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,11 +1,13 @@
-<header>
+<header class="header">
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
-      <a class="navbar-brand" href="#">Robocol</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+
+      <a class="navbar-brand" href="#"><img src="../assets/robocol-BLANCO.png" style="height: 48px; padding: 2px 10px;" class="img-responsive"></a>
+
+      <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarCollapse">
+         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
-         <ul class="navbar-nav mr-auto">
+         <ul class="nav navbar-nav">
             <li class="nav-item">
                <a routerLinkActive="active" 
                   routerLink="/brazo" class="nav-link">Brazo <span class="sr-only">(current)</span>  </a>
