--- a/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.css
+++ b/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.css
@@ -17,3 +17,9 @@ button{
 .columna_botones{
 	margin-bottom: 50px;
 }
+
+@media only screen and (max-width: 1300px) {
+    #sidebar{
+        display: none;
+    }
+}
