--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -12,6 +12,10 @@
             </li>
             <li class="nav-item">
                <a routerLinkActive="active" 
+                  routerLink="/traccion" class="nav-link">Tracción <span class="sr-only">(current)</span>  </a>
+            </li>
+            <li class="nav-item">
+               <a routerLinkActive="active" 
                   routerLink="/prueba" class="nav-link">Prueba <span class="sr-only">(current)</span>  </a>
             </li>
          </ul>
