--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,6 +1,9 @@
 <header>
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
-      <a class="navbar-brand" href="#">Robocol</a>
+      <div class="navbar-header">
+         <a class="navbar-brand" href="#"><img style="height: 48px; padding: 2px 10px;" src="../assets/robocol-BLANCO.png"></a>
+      </div>
+      
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
