--- a/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
+++ b/Robocol/testapp/src/app/brazo/brazo-pestania/brazo-pestania.component.html
@@ -1,10 +1,10 @@
 <div class="row" style="margin-top: 15px">
 
-	<div class="col-4" style="width: 100%">
+	<div id="sidebar" class="col" style="width: 100%">
 		<img src="../../../assets/arm_labels.png" alt="Brazo">
 	</div>
 
-	<div class="col-4">
+	<div class="col-sm-12 col-md-6 col-lg-4">
 		<div class="row">
 			<div class="col-6">
 			<div class="col align-items-center justify-content-center columna_botones">
@@ -69,7 +69,7 @@
 	</div>
 
 
-	<div class="col-4">
+	<div class="col-sm-12 col-md-6 col-lg-4">
 		<div class="row">
 			<div class="col-6">
 			<label>Joint 1:</label><input disabled style="color: black;padding: 5px;font-size: 12px;margin-bottom: 50px" name="" value="0" id = "joint1"><br>
