Minor changes and fixes.

--- a/Robocol/Interfaz/templates/interfaz/home.html
+++ b/Robocol/Interfaz/templates/interfaz/home.html
@@ -12,15 +12,15 @@
     <input id="room-name-submit" type="button" value="Enter"><br>
 
     <script>
-        //document.querySelector('#room-name-output').value = window.location.host;
-        const chatSocket = new WebSocket('ws://'+window.location.host+'/ws/interfaz/');
-        //document.querySelector('#room-name-output').value = window.location.host;
-        chatSocket.onmessage = function(e)
-        {
-            //document.querySelector('#room-name-output').value = "Test";
-            const data = JSON.parse(e.data);
-            document.querySelector('#room-name-output').value = (data.message);
-        };
+        // //document.querySelector('#room-name-output').value = window.location.host;
+        // const chatSocket = new WebSocket('ws://'+window.location.host+'/ws/interfaz/');
+        // //document.querySelector('#room-name-output').value = window.location.host;
+        // chatSocket.onmessage = function(e)
+        // {
+        //     //document.querySelector('#room-name-output').value = "Test";
+        //     const data = JSON.parse(e.data);
+        //     document.querySelector('#room-name-output').value = (data.message);
+        // };
 
         document.querySelector('#room-name-input').focus();
         document.querySelector('#room-name-input').onkeyup = function(e) {
@@ -33,7 +33,7 @@
             var roomName = document.querySelector('#room-name-input').value;
             //document.querySelector('#room-name-output').value = roomName;
             //document.querySelector('#room-name-output').value = "Prueba";
-            chatSocket.send(JSON.stringify({'message': roomName}));
+            // chatSocket.send(JSON.stringify({'message': roomName}));
             //window.location.pathname = '/Interfaz/' + roomName + '/';
         };
     </script>
