pestañas sensorica y estado añadidas

--- a/Robocol/testapp/src/app/app.component.html
+++ b/Robocol/testapp/src/app/app.component.html
@@ -1,19 +1,11 @@
 <header class="header">
    <nav class="navbar navbar-expand-sm navbar-dark bg-dark navbar-fixed-top">
-<<<<<<< HEAD
-
-      <a class="navbar-brand" href="#"><img src="../assets/robocol-BLANCO.png" style="height: 48px; padding: 2px 10px;" class="img-responsive"></a>
-
-      <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarCollapse">
-         <span class="navbar-toggler-icon"></span>
-=======
       <div class="navbar-header">
          <a class="navbar-brand" href="#"><img style="height: 48px; padding: 2px 10px;" src="../assets/robocol-BLANCO.png"></a>
       </div>
       
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
->>>>>>> d56c64fda8ece04c877bee0d3181f746f0be7e0b
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
          <ul class="nav navbar-nav">
@@ -24,6 +16,14 @@
             <li class="nav-item">
                <a routerLinkActive="active" 
                   routerLink="/traccion" class="nav-link">Tracción <span class="sr-only">(current)</span>  </a>
+            </li>
+            <li class="nav-item">
+               <a routerLinkActive="active" 
+                  routerLink="/estado" class="nav-link">Estado <span class="sr-only">(current)</span>  </a>
+            </li>
+            <li class="nav-item">
+               <a routerLinkActive="active" 
+                  routerLink="/sensorica" class="nav-link">Sensórica <span class="sr-only">(current)</span>  </a>
             </li>
             <li class="nav-item">
                <a routerLinkActive="active" 
