--- a/Robocol/testapp/src/app/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/estado/estado-pestania/estado-pestania.component.html
@@ -113,7 +113,7 @@
 
 			<div id="battery" class="battery">
 				<div class="acid-container">
-					<label style="color: white;font-size: 20px;position: absolute;left: 57px;top: 22px;">Digital Systems</label>
+					<label style="color: color: rgba(0, 0, 0, 1);font-size: 20px;position: absolute;left: 333px;top: 303px;">Digital Systems</label>
 					<div class="acid">
 
 						<div id="level1" class="fill"></div>
@@ -149,7 +149,7 @@
 		<div class="cell" style="top:270px">
 			<div id="battery" class="battery">
 				<div class="acid-container">
-					<label style="color: white;font-size: 20px;position: absolute;left: 88px;top: 22px;">Traction</label>
+					<label style="color: color: rgba(0, 0, 0, 1);font-size: 20px;position: absolute;left: 333px;top: 485px;">Traction</label>
 					<div class="acid">
 
 						<div id="level2" class="fill"></div>
@@ -182,10 +182,10 @@
 			</div>
 		</div>
 
-		<div class="cell" style="top:395px">
+		<!--<div class="cell" style="top:395px">
 			<div id="battery" class="battery">
 				<div class="acid-container">
-					<label style="color: white;font-size: 20px;position: absolute;left: 65px;top: 22px;">Access Point</label>
+					<label style="color: color: rgba(0, 0, 0, 1);font-size: 20px;position: absolute;left: 65px;top: 22px;">Access Point</label>
 					<div class="acid">
 						<div id="level3" class="fill"></div>
 						<svg class="waves"
@@ -214,7 +214,7 @@
 			<div class="percentage">
 				<i id="icon" class="fas fa-plug"></i><span id="percentage3">0</span> V
 			</div>
-		</div>
+		</div>-->
 	</div>
 </body>
 
