--- a/Robocol/testapp/src/app/estado/estado-pestania/estado-pestania.component.html
+++ b/Robocol/testapp/src/app/estado/estado-pestania/estado-pestania.component.html
@@ -4,7 +4,7 @@
 
 	<div id="state_tests" style="z-index: 4;height: 522px;width: 710px;position: absolute;padding:29px;top: 0;bottom: 0;left: 50px;border-radius: 20px;box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.13);background: #ffffff08;margin: auto;">
 
-		<!--<img src="{% static 'img/Rover_icon_status.png' %}" style="position: absolute;left: 0;right: 0;top: 0;bottom: 0;margin:auto;width: auto;height: 422px"> -->
+		<img src="../../../assets/Rover_icon_status.png" style="position: absolute;left: 0;right: 0;top: 0;bottom: 0;margin:auto;width: auto;height: 422px">
 
 		<label id="temperature" style="position: absolute;left: 0;right: 0;top: 165px;bottom: 0;margin:auto;display: block;text-align: center;color: white">Temperature<br>0 &degC</label>
 
